By default limits the number of previous orders to 5 Included button to show all previous orders Created post route to add the caseNo to session and display all previous orders for that case Updated dependencies
Signed-off-by: Paul Massey <paul.massey@digital.justice.gov.uk>

--- a/package.json
+++ b/package.json
@@ -82,11 +82,11 @@
   },
   "devDependencies": {
     "cucumber": "6.0.5",
-    "cypress": "4.4.1",
+    "cypress": "4.5.0",
     "cypress-axe": "0.8.1",
     "cypress-cucumber-preprocessor": "2.3.1",
-    "cypress-intellij-reporter": "^0.0.4",
-    "jest": "25.4.0",
+    "cypress-intellij-reporter": "0.0.4",
+    "jest": "25.5.1",
     "jest-junit": "10.0.0",
     "moxios": "0.4.0",
     "node-sass-middleware": "0.11.0",
