--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "precommit": "npm run lint && npm run unit-test && npm run int-test",
     "pre-commit-lite": "npm run lint && npm run unit-test",
-    "pre-push": "npm run int-test",
+    "pre-push": "snyk test --fail-on=upgradable --org=digital-probation-services && npm run int-test",
     "delete:reports": "rm ./test-results/cypress/* || true",
     "preint-test": "npm run delete:reports",
     "preint-test:dev": "npm run delete:reports",
