Included breach detaiols view
Updated mock data to reflect changes to court-case-service
Refactored view.js to make more readable and easier to maintain
Refactored views to reuse date formats more efficiently

Signed-off-by: Paul Massey <paul.massey@digital.justice.gov.uk>

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "lint": "npx standard",
     "start": "node ./bin/www",
     "start:watch": "nodemon --exec npm run start --scripts-prepend-node-path",
-    "unit-test": "NODE_ENV=test npx jest --ci --reporters=default --reporters=jest-junit --collect-coverage"
+    "unit-test": "NODE_ENV=test npx jest --ci --reporters=default --reporters=jest-junit --collect-coverage --detectOpenHandles --forceExit"
   },
   "nodemonConfig": {
     "ignore": [
