--- a/package.json
+++ b/package.json
@@ -92,6 +92,8 @@
     "node-sass-middleware": "0.11.0",
     "nodemon": "2.0.4",
     "standard": "14.3.4",
-    "supertest": "4.0.2"
+    "supertest": "4.0.2",
+    "swagger-client": "^3.10.4",
+    "swagger-model-validator": "^3.0.18"
   }
 }
