--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "url": "https://github.com/ministryofjustice/prepare-a-case.git"
   },
   "engines": {
-    "node": ">=12.17.0 <13.0.0 || >=14.3.0",
-    "yarn": "^1.19.0"
+    "node": ">=12.18.0 <13.0.0 || >=14.4.0"
   },
   "scripts": {
     "precommit": "npm run lint && npm run unit-test && npm run int-test",
@@ -74,7 +73,7 @@
     "debug": "4.1.1",
     "express": "4.17.1",
     "express-session": "1.17.1",
-    "govuk-frontend": "3.6.0",
+    "govuk-frontend": "3.7.0",
     "memorystore": "1.6.2",
     "moment": "2.26.0",
     "morgan": "1.10.0",
