--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -13,7 +13,7 @@ ingress:
   enabled: true
   enable_whitelist: true
   hosts:
-    - host: prepareacase.probation.service.justice.gov.uk
+    - host: prepareacase-probation.service.justice.gov.uk
       cert_secret: prepare-a-case-cert
   path: /
 
