Included :lock: helmet and set maxAge as per ticket
Updated dependencies

Signed-off-by: Paul Massey <paul.massey@digital.justice.gov.uk>

--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "express": "4.17.1",
     "express-session": "1.17.1",
     "govuk-frontend": "3.7.0",
+    "helmet": "3.23.0",
     "memorystore": "1.6.2",
     "moment": "2.26.0",
     "morgan": "1.10.0",
@@ -81,9 +82,9 @@
   },
   "devDependencies": {
     "cucumber": "6.0.5",
-    "cypress": "4.7.0",
+    "cypress": "4.8.0",
     "cypress-axe": "0.8.1",
-    "cypress-cucumber-preprocessor": "2.4.0",
+    "cypress-cucumber-preprocessor": "2.5.0",
     "cypress-intellij-reporter": "0.0.4",
     "jest": "26.0.1",
     "jest-junit": "10.0.0",
