--- a/package.json
+++ b/package.json
@@ -68,18 +68,33 @@
   },
   "dependencies": {
     "@ministryofjustice/frontend": "0.0.19-alpha",
+    "agentkeepalive": "^4.1.3",
+    "applicationinsights": "^1.7.6",
     "axios": "0.19.2",
+    "bunyan": "^1.8.12",
+    "bunyan-format": "^0.2.1",
+    "bunyan-request-logger": "^2.1.0",
     "compression": "1.7.4",
     "cookie-parser": "1.4.5",
+    "cookie-session": "^1.4.0",
+    "csurf": "^1.11.0",
     "debug": "4.2.0",
+    "dotenv": "^8.2.0",
     "express": "4.17.1",
+    "express-request-id": "^1.4.1",
     "express-session": "1.17.1",
     "govuk-frontend": "3.7.0",
     "helmet": "3.23.0",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
     "memorystore": "1.6.2",
     "moment": "2.26.0",
     "morgan": "1.10.0",
-    "nunjucks": "3.2.1"
+    "nock": "^12.0.3",
+    "node-sass-middleware": "^0.11.0",
+    "nunjucks": "3.2.1",
+    "passport": "^0.4.1",
+    "passport-oauth2": "^1.5.0"
   },
   "devDependencies": {
     "cucumber": "6.0.5",
@@ -93,6 +108,8 @@
     "node-sass": "4.14.1",
     "nodemon": "2.0.4",
     "standard": "14.3.4",
-    "supertest": "4.0.2"
+    "supertest": "4.0.2",
+    "mocha": "^7.1.1",
+    "mocha-junit-reporter": "^1.23.3"
   }
 }
