--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -145,7 +145,7 @@ jobs:
           background: true
       - run:
           name: Run the app
-          command: npm run start
+          command: npm run start-feature
           background: true
       - run:
           name: Wait for node app to start
