--- a/package.json
+++ b/package.json
@@ -63,37 +63,37 @@
   },
   "dependencies": {
     "@ministryofjustice/frontend": "0.0.19-alpha",
-    "agentkeepalive": "^4.1.3",
+    "agentkeepalive": "4.1.3",
     "axios": "0.19.2",
-    "bunyan": "^1.8.12",
-    "bunyan-format": "^0.2.1",
-    "bunyan-request-logger": "^2.1.0",
+    "bunyan": "1.8.14",
+    "bunyan-format": "0.2.1",
+    "bunyan-request-logger": "2.1.0",
     "compression": "1.7.4",
     "cookie-parser": "1.4.5",
-    "cookie-session": "^1.4.0",
-    "csurf": "^1.11.0",
-    "dotenv": "^8.2.0",
+    "cookie-session": "1.4.0",
+    "csurf": "1.11.0",
     "debug": "4.1.1",
+    "dotenv": "8.2.0",
     "express": "4.17.1",
-    "express-request-id": "^1.4.1",
+    "express-request-id": "1.4.1",
     "express-session": "1.17.1",
     "govuk-frontend": "3.7.0",
     "helmet": "3.23.3",
-    "jsonwebtoken": "^8.5.1",
-    "jwt-decode": "^2.2.0",
+    "jsonwebtoken": "8.5.1",
+    "jwt-decode": "2.2.0",
     "memorystore": "1.6.2",
     "moment": "2.27.0",
     "morgan": "1.10.0",
-    "nock": "^12.0.3",
+    "nock": "13.0.2",
     "nunjucks": "3.2.1",
-    "passport": "^0.4.1",
-    "passport-oauth2": "^1.5.0"
+    "passport": "0.4.1",
+    "passport-oauth2": "1.5.0"
   },
   "devDependencies": {
     "cucumber": "6.0.5",
     "cypress": "4.9.0",
     "cypress-axe": "0.8.1",
-    "cypress-cucumber-preprocessor": "2.5.0",
+    "cypress-cucumber-preprocessor": "2.5.1",
     "cypress-intellij-reporter": "0.0.4",
     "jest": "26.1.0",
     "jest-junit": "11.0.1",
