--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -141,11 +141,11 @@ jobs:
           key: dependencies-cache-{{ checksum "package.json" }}
       - run:
           name: Run wiremock
-          command: java -jar wiremock-standalone-2.26.3.jar --global-response-templating --port 9091
+          command: java -jar wiremock-standalone-2.27.0.jar --global-response-templating --port 9091
           background: true
       - run:
           name: Run the app
-          command: npm run start
+          command: npm run start-feature
           background: true
       - run:
           name: Wait for node app to start
