--- a/helm_deploy/prepare-a-case/templates/deployment.yaml
+++ b/helm_deploy/prepare-a-case/templates/deployment.yaml
@@ -26,7 +26,7 @@ spec:
         release: {{ .Release.Name }}
     spec:
       containers:
-        - name: court-case-service
+        - name: prepare-a-case
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
@@ -34,7 +34,7 @@ spec:
               protocol: TCP
           livenessProbe:
             httpGet:
-              path: /ping
+              path: /health
               port: {{ .Values.image.port }}
             periodSeconds: 30
             initialDelaySeconds: 90
@@ -42,7 +42,7 @@ spec:
             failureThreshold: 10
           readinessProbe:
             httpGet:
-              path: /ping
+              path: /health
               port: {{ .Values.image.port }}
             periodSeconds: 20
             initialDelaySeconds: 60
