--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -12,9 +12,8 @@ image:
 ingress:
   enabled: true
   enable_whitelist: true
-  hosts:
-    - host: prepare-a-case-preprod.apps.live-1.cloud-platform.service.justice.gov.uk
-      cert_secret: prepare-a-case-cert
+  host: prepare-a-case-preprod.apps.live-1.cloud-platform.service.justice.gov.uk
+  cert_secret: prepare-a-case-cert
   path: /
 
 env:
