--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -12,9 +12,8 @@ image:
 ingress:
   enabled: true
   enable_whitelist: true
-  hosts:
-    - host: prepare-case-probation.service.justice.gov.uk
-      cert_secret: court-probation-cert-secret
+  host: prepare-case-probation.service.justice.gov.uk
+  cert_secret: court-probation-cert-secret
   path: /
 
 env:
