--- a/helm_deploy/prepare-a-case/templates/ingress.yaml
+++ b/helm_deploy/prepare-a-case/templates/ingress.yaml
@@ -33,19 +33,16 @@ metadata:
          setvar:tx.paranoia_level=2"
 spec:
   tls:
-  {{- range .Values.ingress.hosts }}
-  - hosts:
-      - {{ .host }}
-    {{ if .cert_secret }}secretName: {{ .cert_secret }}{{ end }}
-  {{- end }}
+    - hosts:
+        - {{ .Values.ingress.host }}
+      {{ if .Values.ingress.cert_secret }}secretName: {{ .Values.ingress.cert_secret }}{{ end }}
   rules:
-  {{- range .Values.ingress.hosts }}
-  - host: {{ .host }}
-    http:
-      paths:
-        - path: {{ $ingressPath }}
-          backend:
-            serviceName: {{ $fullName }}
-            servicePort: http
+    - host: {{ .Values.ingress.host }}
+      http:
+        paths:
+          - path: {{ $ingressPath }}
+            backend:
+              serviceName: {{ $fullName }}
+              servicePort: http
   {{- end }}
 {{- end }}
