--- a/package.json
+++ b/package.json
@@ -87,7 +87,8 @@
     "nock": "13.0.2",
     "nunjucks": "3.2.1",
     "passport": "0.4.1",
-    "passport-oauth2": "1.5.0"
+    "passport-oauth2": "1.5.0",
+    "superagent": "5.3.1"
   },
   "devDependencies": {
     "cucumber": "6.0.5",
