--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -17,7 +17,7 @@ ingress:
   path: /
 
 env:
-  COURT_CASE_SERVICE_URL: http://court-case-service-dev.apps.live-1.cloud-platform.service.justice.gov.uk
+  COURT_CASE_SERVICE_URL: https://court-case-service-dev.apps.live-1.cloud-platform.service.justice.gov.uk
   CASES_PER_PAGE: 20
   NOMIS_AUTH_URL: https://gateway.t3.nomis-api.hmpps.dsd.io/auth
   EXIT_LOCATION_URL: https://prepare-a-case-dev.apps.live-1.cloud-platform.service.justice.gov.uk
