--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -17,7 +17,7 @@ ingress:
   path: /
 
 env:
-  COURT_CASE_SERVICE_URL: http://court-case-service-prod.apps.live-1.cloud-platform.service.justice.gov.uk
+  COURT_CASE_SERVICE_URL: https://court-case-service-prod.apps.live-1.cloud-platform.service.justice.gov.uk
   CASES_PER_PAGE: 20
   NOMIS_AUTH_URL: https://gateway.prod.nomis-api.service.hmpps.dsd.io/auth
   EXIT_LOCATION_URL: https://prepare-case-probation.service.justice.gov.uk
