--- a/package.json
+++ b/package.json
@@ -64,9 +64,10 @@
   "dependencies": {
     "@ministryofjustice/frontend": "0.0.19-alpha",
     "agentkeepalive": "4.1.3",
-    "applicationinsights": "^1.8.2",
+    "applicationinsights": "1.8.2",
     "applicationinsights-native-metrics": "0.0.5",
     "axios": "0.19.2",
+    "axios-middleware": "0.3.1",
     "bunyan": "1.8.14",
     "bunyan-format": "0.2.1",
     "bunyan-request-logger": "2.1.0",
