--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "start": "npm run css-build && node ./bin/www",
     "start:watch": "nodemon --exec npm run start --scripts-prepend-node-path",
     "unit-test": "NODE_ENV=test npx jest --config=tests/jest.config.js --ci --detectOpenHandles --forceExit",
-    "mock-validation-test": "NODE_ENV=test npx jest --config=mock_validation/jest.config.js --ci"
+    "mock-validation-test": "NODE_ENV=test npx jest --config=mock_validation/jest.config.js --ci",
+    "record-build-info": "node ./bin/record-build-info"
   },
   "nodemonConfig": {
     "ignore": [
