--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -185,7 +185,7 @@ jobs:
                --label "build.version=$APP_VERSION" \
                --label "build.number=$CIRCLE_BUILD_NUM" \
                --label "build.url=$CIRCLE_BUILD_URL" \
-               --label "build.gitref=$CIRCLE_SHA1"
+               --label "build.gitref=$CIRCLE_SHA1" \
                --build-arg BUILD_NUMBER=$APP_VERSION \
                --build-arg GIT_REF=$CIRCLE_SHA1 \
       - snyk/scan:
