--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -20,6 +20,7 @@ env:
   COURT_CASE_SERVICE_URL: https://court-case-service-preprod.apps.live-1.cloud-platform.service.justice.gov.uk
   CASES_PER_PAGE: 20
   NOMIS_AUTH_URL: https://gateway.preprod.nomis-api.service.hmpps.dsd.io/auth
+  COURT_CODE: B10JQ00
 
 whitelist:
   office: "217.33.148.210/32"
