--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "css-build": "sh ./bin/build-css",
     "start": "npm run css-build && node ./bin/www",
     "start:watch": "nodemon --exec npm run start --scripts-prepend-node-path",
-    "unit-test": "NODE_ENV=test npx jest --config=tests/jest.config.js --ci --detectOpenHandles --forceExit",
+    "unit-test": "NODE_ENV=test npx jest --config=./tests/jest.config.js --ci --detectOpenHandles --forceExit",
     "mock-validation-test": "NODE_ENV=test npx jest --config=mock_validation/jest.config.js --ci",
     "record-build-info": "node ./bin/record-build-info"
   },
