--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -19,7 +19,7 @@ ingress:
 env:
   COURT_CASE_SERVICE_URL: https://court-case-service.apps.live-1.cloud-platform.service.justice.gov.uk
   CASES_PER_PAGE: 20
-  NOMIS_AUTH_URL: https://gateway.prod.nomis-api.service.hmpps.dsd.io/auth
+  NOMIS_AUTH_URL: https://gateway.nomis-api.service.justice.gov.uk/auth
   COURT_CODE: B10JQ00
   COURT_NAME: "North Tyneside Magistrates' Court"
 
