:arrow_up: Upgrade dependencies
Signed-off-by: Paul Massey <paul.massey@digital.justice.gov.uk>

--- a/package.json
+++ b/package.json
@@ -63,11 +63,11 @@
     "stepDefinitions": "integration-tests/integration/"
   },
   "dependencies": {
-    "@ministryofjustice/frontend": "0.0.19-alpha",
+    "@ministryofjustice/frontend": "0.0.21",
     "agentkeepalive": "4.1.3",
     "applicationinsights": "1.8.7",
     "applicationinsights-native-metrics": "0.0.5",
-    "axios": "0.20.0",
+    "axios": "0.21.0",
     "axios-middleware": "0.3.1",
     "bunyan": "1.8.14",
     "bunyan-format": "0.2.1",
@@ -75,16 +75,16 @@
     "cookie-parser": "1.4.5",
     "cookie-session": "1.4.0",
     "csurf": "1.11.0",
-    "debug": "4.3.0",
+    "debug": "4.2.0",
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "express-request-id": "1.4.1",
     "express-session": "1.17.1",
     "govuk-frontend": "3.9.1",
-    "helmet": "4.1.1",
+    "helmet": "4.2.0",
     "jsonwebtoken": "8.5.1",
     "jwt-decode": "3.0.0",
-    "memorystore": "1.6.2",
+    "memorystore": "1.6.4",
     "moment": "2.29.1",
     "morgan": "1.10.0",
     "nock": "13.0.4",
@@ -95,17 +95,17 @@
   },
   "devDependencies": {
     "cucumber": "6.0.5",
-    "cypress": "5.3.0",
-    "cypress-axe": "0.8.1",
-    "cypress-cucumber-preprocessor": "3.0.0",
-    "jest": "26.5.3",
+    "cypress": "5.5.0",
+    "cypress-axe": "0.9.1",
+    "cypress-cucumber-preprocessor": "4.0.0",
+    "jest": "26.6.2",
     "jest-junit": "12.0.0",
     "moxios": "0.4.0",
-    "node-sass": "4.14.1",
-    "nodemon": "2.0.5",
-    "standard": "14.3.4",
-    "supertest": "5.0.0",
-    "swagger-client": "3.11.1",
+    "node-sass": "5.0.0",
+    "nodemon": "2.0.6",
+    "standard": "16.0.1",
+    "supertest": "6.0.0",
+    "swagger-client": "3.12.0",
     "swagger-model-validator": "3.0.19"
   }
 }
