--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "cypress-cucumber-preprocessor": "4.0.0",
     "jest": "26.6.2",
     "jest-junit": "12.0.0",
+    "mockdate": "3.0.2",
     "moxios": "0.4.0",
     "node-sass": "5.0.0",
     "nodemon": "2.0.6",
