--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "https://github.com/ministryofjustice/prepare-a-case.git"
   },
   "engines": {
-    "node": ">=12.18.4 <13.0.0 || >=14.11.0"
+    "node": ">=14.15.1 <15.0.0"
   },
   "scripts": {
     "precommit": "npm run lint && npm run unit-test && npm run mock-validation-test && npm run int-test",
