--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ yarn.lock
 yarn-error.log
 test-results/
 coverage/
+/public/**/*.min.*
 public/stylesheets/*.css
 public/stylesheets/*.css.map
 build-info.json
