:rotating_light: Lint fixes
Signed-off-by: Paul Massey <paul.massey@digital.justice.gov.uk>

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "standard": {
     "ignore": [
+      "/public/**/*.js",
       "/integration-tests/config",
       "/integration-tests/plugins",
       "/integration-tests/support"
