--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,6 +94,9 @@ jobs:
       - run:
           name: Install dependencies
           command: npm ci
+      - run:
+          name: Build css
+          command: npm run css-build
       - save_cache:
           key: dependencies-cache-{{ checksum "package.json" }}
           paths:
