--- a/helm_deploy/prepare-a-case/templates/ingress.yaml
+++ b/helm_deploy/prepare-a-case/templates/ingress.yaml
@@ -14,6 +14,7 @@ metadata:
     kubernetes.io/ingress.class: "nginx"
     {{ if .Values.ingress.enable_whitelist }}nginx.ingress.kubernetes.io/whitelist-source-range: {{ include "app.joinListWithComma" .Values.whitelist | quote }}{{ end }}
     nginx.ingress.kubernetes.io/custom-http-errors: "418"
+    kubernetes.io/ingress.class: "modsec01"
 spec:
   tls:
     - hosts:
