--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "minify-js-css": "bash ./bin/minify-js-css",
     "start": "npm run css-build && npm run minify-js-css && node ./bin/www",
     "start:watch": "nodemon --exec npm run start --scripts-prepend-node-path",
-    "unit-test": "NODE_ENV=test npx jest --config=./tests/jest.config.js --ci --detectOpenHandles --forceExit",
-    "pact-test": "NODE_ENV=test npx jest --config=./tests/jest.pact.config.js --ci --runInBand",
+    "unit-test": "npx jest --config=./tests/jest.config.js --ci --detectOpenHandles --forceExit",
+    "pact-test": "npx jest --config=./tests/jest.pact.config.js --ci",
     "record-build-info": "node ./bin/record-build-info"
   },
   "config": {
