:construction_worker: Use generated app version for Pact
Signed-off-by: Paul Massey <paul.massey@digital.justice.gov.uk>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -170,6 +170,8 @@ jobs:
     executor: builder
     steps:
       - checkout
+      - mem/recall:
+          env_var: APP_VERSION
       - attach_workspace:
           at: ~/app
       - restore_cache:
@@ -185,7 +187,7 @@ jobs:
           command: |
             npx pact-broker publish pact/pacts \
               --broker-base-url $PACT_BROKER_BASE_URL \
-              --consumer-app-version $CIRCLE_SHA1 --tag $CIRCLE_BRANCH \
+              --consumer-app-version $APP_VERSION --tag $CIRCLE_BRANCH \
               -u $PACT_BROKER_USERNAME -p $PACT_BROKER_PASSWORD
 
   build_docker:
