--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -1,7 +1,8 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 1
+minReplicaCount: 1
+maxReplicaCount: 1
 
 image:
   repository: docker.io/mojdigitalstudio/prepare-a-case
