--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -1,7 +1,8 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 1
+minReplicaCount: 2
+maxReplicaCount: 4
 
 image:
   repository: docker.io/mojdigitalstudio/prepare-a-case
