--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "https://github.com/ministryofjustice/prepare-a-case.git"
   },
   "engines": {
-    "node": ">=14.15.4 <15.0.0"
+    "node": ">=14.16.0 <15.0.0"
   },
   "scripts": {
     "precommit": "npm run lint && npm run unit-test && npm run int-test",
@@ -28,7 +28,7 @@
     "css-build": "bash ./bin/build-css",
     "minify-js-css": "bash ./bin/minify-js-css",
     "start": "npm run css-build && npm run minify-js-css && node ./bin/www",
-    "start:watch": "nodemon --exec npm run start --scripts-prepend-node-path",
+    "start:watch": "npx nodemon --exec npm run start --scripts-prepend-node-path",
     "unit-test": "npx jest --config=./tests/jest.config.js --ci --detectOpenHandles --forceExit",
     "pact-test": "rm -rf pact && npx jest --config=./tests/jest.pact.config.js --ci",
     "record-build-info": "node ./bin/record-build-info"
@@ -100,7 +100,7 @@
     "superagent": "6.1.0"
   },
   "devDependencies": {
-    "@pact-foundation/pact": "9.15.0",
+    "@pact-foundation/pact": "9.15.1",
     "axe-core": "4.1.2",
     "cucumber": "6.0.5",
     "cypress": "6.5.0",
@@ -108,7 +108,7 @@
     "cypress-cucumber-preprocessor": "4.0.1",
     "jest": "26.6.3",
     "jest-junit": "12.0.0",
-    "jest-pact": "0.8.1",
+    "jest-pact": "0.8.3",
     "minify": "7.0.1",
     "mockdate": "3.0.2",
     "moxios": "0.4.0",
