--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -28,4 +28,6 @@ whitelist:
   cloudplatform-live1-1: "35.178.209.113/32"
   cloudplatform-live1-2: "3.8.51.207/32"
   cloudplatform-live1-3: "35.177.252.54/32"
+  ark-internet-1: "194.33.192.0/25"
+  ark-internet-2: "194.33.196.0/25"
   moj-official-aws-preprod: "51.149.251.0/24"
