--- a/package.json
+++ b/package.json
@@ -103,7 +103,7 @@
     "@pact-foundation/pact": "9.15.1",
     "axe-core": "4.1.2",
     "cucumber": "6.0.5",
-    "cypress": "^6.5.0",
+    "cypress": "6.5.0",
     "cypress-axe": "0.12.2",
     "cypress-cucumber-preprocessor": "4.0.1",
     "jest": "26.6.3",
